added joystick's buttons (stop and halt) engines code moved from GUI to robotcontrol.cpp some minor changes

--- a/host/gui/widget.ui
+++ b/host/gui/widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>383</width>
-    <height>331</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -262,6 +262,32 @@
    </property>
    <property name="text">
     <string>Vertical</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>320</y>
+     <width>161</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Остановить двигатели</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>340</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Поворот на месте</string>
    </property>
   </widget>
  </widget>
