--- a/host/gui/widget.ui
+++ b/host/gui/widget.ui
@@ -24,28 +24,57 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>111</width>
-     <height>51</height>
+     <width>131</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="title">
-    <string>COM-Port name</string>
+    <string>Address</string>
    </property>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QLineEdit" name="ipEdit">
     <property name="geometry">
      <rect>
-      <x>12</x>
+      <x>10</x>
       <y>20</y>
-      <width>91</width>
+      <width>113</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="inputMask">
+     <string>000.000.000.000; </string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="portSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>46</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>30000</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="connectBtn">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>50</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Connect</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>260</x>
      <y>10</y>
      <width>112</width>
      <height>51</height>
@@ -54,7 +83,7 @@
    <property name="title">
     <string>Engines number</string>
    </property>
-   <widget class="QSpinBox" name="spinBox">
+   <widget class="QSpinBox" name="enginesSpinBox">
     <property name="enabled">
      <bool>false</bool>
     </property>
@@ -67,14 +96,14 @@
      </rect>
     </property>
     <property name="value">
-     <number>3</number>
+     <number>6</number>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>140</x>
      <y>10</y>
      <width>121</width>
      <height>51</height>
@@ -83,7 +112,7 @@
    <property name="title">
     <string>Joystick name</string>
    </property>
-   <widget class="QComboBox" name="comboBox_2">
+   <widget class="QComboBox" name="joystickCombo">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -106,8 +135,8 @@
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
+     <x>190</x>
+     <y>340</y>
      <width>181</width>
      <height>20</height>
     </rect>
