P-regulator implemented. Test utils updated.

--- a/host/gui/widget.ui
+++ b/host/gui/widget.ui
@@ -371,6 +371,19 @@
     <string/>
    </property>
   </widget>
+  <widget class="QCheckBox" name="checkBox_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>340</y>
+     <width>171</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Авто-регулировка</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
