--- a/host/gui/widget.ui
+++ b/host/gui/widget.ui
@@ -135,8 +135,8 @@
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>360</y>
+     <x>380</x>
+     <y>340</y>
      <width>181</width>
      <height>20</height>
     </rect>
@@ -162,6 +162,9 @@
    </property>
    <property name="maximum">
     <number>255</number>
+   </property>
+   <property name="value">
+    <number>-255</number>
    </property>
    <property name="orientation">
     <enum>Qt::Vertical</enum>
@@ -211,17 +214,20 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="heightLabel">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>200</y>
      <width>41</width>
-     <height>16</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Высота</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -362,7 +368,7 @@
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>320</y>
+     <y>310</y>
      <width>211</width>
      <height>31</height>
     </rect>
@@ -371,17 +377,33 @@
     <string/>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_4">
+  <widget class="QCheckBox" name="autoHeightCheck">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>340</y>
-     <width>171</width>
+     <width>181</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Авто-регулировка</string>
+    <string>Авто-регулировка высоты</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="autoPitchCheck">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>360</y>
+     <width>211</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Авто-регулировка дифферента</string>
    </property>
    <property name="checked">
     <bool>true</bool>
